java/java-tests/testData/codeInsight/daemonCodeAnalyzer/unnamedClass/HighlightInsufficientLevel.java
<error descr="Unnamed classes are not supported at language level '20'">void foo() {

}</error>

<error descr="Unnamed classes are not supported at language level '20'">String s = "asd";</error>

<error descr="Unnamed classes are not supported at language level '20'">static {

}</error>

class A {

}